objects/nFORCE__Route_Terms__c.object
<CustomObject>
    <description>The Route Terms object is a junction between a UI route and a document which causes the document to be listed for agreement.</description>
    <fields>
        <fullName>nFORCE__Agreement_Text__c</fullName>
        <description>This text is displayed to the user with a link to a disclosure document, specified by the financial institution.</description>
        <label>Agreement Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Conditional_Display_Criteria__c</fullName>
        <description>This field is manually populated. It is optional. This field uses a Forms Lite expression to specify criteria that must be met for this route to become visible to the user.</description>
        <label>Conditional Display Criteria</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Document__c</fullName>
        <description>This field stores the Salesforce ID that is connected to the disclosure (a Salesforce document) that the user is presented with before they agree to the terms. An admin-user specifies the Salesforce ID of the document that is displayed.</description>
        <inlineHelpText>Enter the Salesforce ID of the document that you want to display for agreement on a particular route in the retail loan workflow.</inlineHelpText>
        <label>Document</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Review_And_Accept_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators populate this checkbox to allow the user to review and accept the document within the route term. By default, it is not enabled.</description>
        <inlineHelpText>Select this checkbox to force the user to review and accept the document within the route term before being allowed to continue.</inlineHelpText>
        <label>Review and Accept Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field maps to a UI route in the retail loan workflow. The selected Salesforce disclosure document is displayed on this route to the user.</description>
        <inlineHelpText>This is the UI route which displays the Salesforce disclosure document.</inlineHelpText>
        <label>Route</label>
        <referenceTo>nFORCE__Route__c</referenceTo>
        <relationshipLabel>Route Terms</relationshipLabel>
        <relationshipName>Route_Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Route Terms</label>
    <nameField>
        <label>Route Terms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Route Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>